tests/data/specs/invalid/multiple_errors.rflx
package Multiple_Errors is
   type INVALID is unsigned 8;
   type INVALID is unsigned 8;
   type INVALID is unsigned 8;
   type INVALID is unsigned 8;
   type INVALID is unsigned 8;
   type INVALID is unsigned 8;
   type INVALID is unsigned 8;
   type INVALID is unsigned 8;
   type INVALID is unsigned 8;
   type INVALID is unsigned 8;
end Multiple_Errors;
